[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgia"
authors = [
  {name = "sttlr"}
]
description = "Use RDAP and WHOIS to find ASNs, Networks, and CIDRs about Organisations."
keywords = ["whois", "rdap", "asn", "network", "cidr", "organisation", "recon"]
dynamic = ["version"]
dependencies = [
  "pyyaml",
  "httpx",
  "h2",
  "beautifulsoup4",
  "lxml"
]
requires-python = ">= 3.10"
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License"
]

[tool.hatch.version]
path = "orgia/__init__.py"

[project.urls]
Homepage = "https://github.com/sttlr/orgia"

[project.scripts]
orgia = "orgia.__main__:main"
